# postgres

./: configure  configure.ac  meson.build
contrib/: Makefile  meson.build
contrib/auto_explain/: auto_explain.c
contrib/pg_buffercache/: Makefile  meson.build  pg_buffercache--1.6--1.7.sql  pg_buffercache--1.7--1.8.sql  pg_buffercache_pages.c
contrib/pg_buffercache/expected/: pg_buffercache.out
contrib/pg_buffercache/sql/: pg_buffercache.sql
contrib/pg_plan_advice/: pgpa_join.c
contrib/pg_session_buffer_usage/: Makefile  meson.build  pg_session_buffer_usage--1.0.sql  pg_session_buffer_usage.c  pg_session_buffer_usage.control
contrib/pg_session_buffer_usage/expected/: pg_session_buffer_usage.out
contrib/pg_session_buffer_usage/sql/: pg_session_buffer_usage.sql
contrib/pg_stat_plans/: Makefile  meson.build  pg_stat_plans--1.0.sql  pg_stat_plans.c  pg_stat_plans.conf  pg_stat_plans.control
contrib/pg_stat_statements/: Makefile  meson.build  pg_stat_statements--1.10--1.11.sql  pg_stat_statements--1.12--1.13.sql  pg_stat_statements--1.13--1.14.sql  pg_stat_statements.c
contrib/pg_stat_statements/expected/: entry_timestamp.out  oldextversions.out  pg_stat_statements.out  utility.out  wal.out
contrib/pg_stat_statements/sql/: entry_timestamp.sql  oldextversions.sql  pg_stat_statements.sql  utility.sql  wal.sql
contrib/pgcrypto/: openssl.c
contrib/postgres_fdw/: postgres_fdw.c
contrib/postgres_fdw/expected/: postgres_fdw.out
doc/src/sgml/: config.sgml  contrib.sgml  filelist.sgml  monitoring.sgml  perform.sgml  pgbuffercache.sgml  pgstatplans.sgml  pgstatstatements.sgml  storage.sgml
src/backend/catalog/: index.c  system_views.sql
src/backend/commands/: Makefile  analyze.c  cluster.c  dbcommands.c  dynamic_explain.c  explain.c  explain_dr.c  explain_state.c  indexcmds.c  meson.build  prepare.c  repack.c  tablecmds.c  trigger.c  vacuum.c  vacuumparallel.c
src/backend/executor/: README.instrument  execMain.c  execParallel.c  execPartition.c  execProcnode.c  execUtils.c  instrument.c  nodeAgg.c  nodeBitmapHeapscan.c  nodeBitmapIndexscan.c  nodeHash.c  nodeIncrementalSort.c  nodeIndexonlyscan.c  nodeIndexscan.c  nodeMemoize.c  nodeSeqscan.c  nodeSort.c  nodeTidrangescan.c
src/backend/lib/: dshash.c
src/backend/main/: main.c
src/backend/nodes/: Makefile  gen_node_support.pl  meson.build  planjumble.c  queryjumblefuncs.c
src/backend/parser/: gram.y  scan.l
src/backend/postmaster/: autovacuum.c  launch_backend.c  pgstat.c  postmaster.c
src/backend/tcop/: postgres.c  pquery.c
src/common/: instr_time.c  meson.build
src/include/: miscadmin.h  pgstat.h
src/include/access/: genam.h  heapam.h  relscan.h  tableam.h  xact.h  xlog.h
src/port/: meson.build  pg_cpu_arm.c  pg_cpu_x86.c  pg_crc32c_sse42_choose.c  pg_popcount_avx512.c  pg_popcount_x86.c
src/test/modules/test_session_buffer_usage/: Makefile  meson.build  test_session_buffer_usage--1.0.sql  test_session_buffer_usage.c  test_session_buffer_usage.control
src/test/modules/test_session_buffer_usage/expected/: test_session_buffer_usage.out
src/test/modules/test_session_buffer_usage/sql/: test_session_buffer_usage.sql
(+105 files in other folders)
